feat: add delete message fixed a bug with the last message after sending in the chat
